--- a/DealerPersonalAccount/packages.config
+++ b/DealerPersonalAccount/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dapper" version="2.1.28" targetFramework="net481" />
   <package id="Microsoft.AspNet.Mvc" version="5.3.0" targetFramework="net481" />
   <package id="Microsoft.AspNet.Razor" version="3.3.0" targetFramework="net481" />
   <package id="Microsoft.AspNet.WebPages" version="3.3.0" targetFramework="net481" />
