--- a/DealerPersonalAccount/packages.config
+++ b/DealerPersonalAccount/packages.config
@@ -5,5 +5,8 @@
   <package id="Microsoft.AspNet.Razor" version="3.3.0" targetFramework="net481" />
   <package id="Microsoft.AspNet.WebPages" version="3.3.0" targetFramework="net481" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0" targetFramework="net481" />
+  <package id="Microsoft.Owin" version="4.2.2" targetFramework="net481" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.2" targetFramework="net481" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net481" />
+  <package id="Owin" version="1.0" targetFramework="net481" />
 </packages>
