--- a/DealerPersonalAccount/packages.config
+++ b/DealerPersonalAccount/packages.config
@@ -4,9 +4,14 @@
   <package id="Microsoft.AspNet.Mvc" version="5.3.0" targetFramework="net481" />
   <package id="Microsoft.AspNet.Razor" version="3.3.0" targetFramework="net481" />
   <package id="Microsoft.AspNet.WebPages" version="3.3.0" targetFramework="net481" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net481" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0" targetFramework="net481" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="8.0.0" targetFramework="net481" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.0" targetFramework="net481" />
   <package id="Microsoft.Owin" version="4.2.2" targetFramework="net481" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.2" targetFramework="net481" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net481" />
   <package id="Owin" version="1.0" targetFramework="net481" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net481" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net481" />
 </packages>
