--- a/DealerPersonalAccount/packages.config
+++ b/DealerPersonalAccount/packages.config
@@ -44,6 +44,7 @@
   <package id="Newtonsoft.Json" version="5.0.4" targetFramework="net481" />
   <package id="Owin" version="1.0" targetFramework="net481" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net481" />
+  <package id="System.Data.SqlClient" version="4.8.6" targetFramework="net481" />
   <package id="System.Diagnostics.DiagnosticSource" version="8.0.0" targetFramework="net481" />
   <package id="System.Memory" version="4.5.5" targetFramework="net481" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net481" />
