--- a/DealerPersonalAccount/DealerPersonalAccount.csproj
+++ b/DealerPersonalAccount/DealerPersonalAccount.csproj
@@ -275,6 +275,9 @@
     </Compile>
     <Compile Include="Models\App\Application.cs" />
     <Compile Include="Models\App\AppSettings.cs" />
+    <Compile Include="Models\Entity\Agent.cs" />
+    <Compile Include="Models\Entity\Payment.cs" />
+    <Compile Include="Models\Entity\Operator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
