--- a/DealerPersonalAccount/DealerPersonalAccount.csproj
+++ b/DealerPersonalAccount/DealerPersonalAccount.csproj
@@ -278,6 +278,8 @@
     <Compile Include="Models\Entity\Agent.cs" />
     <Compile Include="Models\Entity\Payment.cs" />
     <Compile Include="Models\Entity\Operator.cs" />
+    <Compile Include="Models\Repository\IRepository.cs" />
+    <Compile Include="Models\Repository\OperatorRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
