--- a/DealerPersonalAccount/DealerPersonalAccount.csproj
+++ b/DealerPersonalAccount/DealerPersonalAccount.csproj
@@ -269,6 +269,7 @@
     <Compile Include="App_Start\Startup.Services.cs" />
     <Compile Include="Connections\DefaultSqlConnection.cs" />
     <Compile Include="Connections\ISqlConnectionProvider.cs" />
+    <Compile Include="Controllers\OperatorPage\OperatorController.cs" />
     <Compile Include="DI\DefaultDependencyResolver.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -280,6 +281,9 @@
     <Compile Include="Models\Entity\Operator.cs" />
     <Compile Include="Models\Repository\IRepository.cs" />
     <Compile Include="Models\Repository\OperatorRepository.cs" />
+    <Compile Include="Models\Validation\TaxDataCheck.cs" />
+    <Compile Include="Models\ViewModels\IViewModel.cs" />
+    <Compile Include="Models\ViewModels\OperatorViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -314,6 +318,8 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Operator\Index.cshtml" />
+    <Content Include="Views\Operator\Create.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
