--- a/DealerPersonalAccount/DealerPersonalAccount.csproj
+++ b/DealerPersonalAccount/DealerPersonalAccount.csproj
@@ -271,20 +271,27 @@
     <Compile Include="Connections\ISqlConnectionProvider.cs" />
     <Compile Include="Controllers\HomePage\HomeController.cs" />
     <Compile Include="Controllers\OperatorPage\OperatorController.cs" />
+    <Compile Include="Controllers\UsersPage\UserController.cs" />
     <Compile Include="DI\DefaultDependencyResolver.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\App\Application.cs" />
     <Compile Include="Models\App\AppSettings.cs" />
-    <Compile Include="Models\Entity\Agent.cs" />
+    <Compile Include="Models\Entity\RoleType.cs" />
+    <Compile Include="Models\Entity\User.cs" />
     <Compile Include="Models\Entity\Payment.cs" />
     <Compile Include="Models\Entity\Operator.cs" />
+    <Compile Include="Models\Repository\IUserRepository.cs" />
+    <Compile Include="Models\Repository\UserRepository.cs" />
     <Compile Include="Models\Repository\IRepository.cs" />
     <Compile Include="Models\Repository\OperatorRepository.cs" />
     <Compile Include="Models\Validation\TaxDataCheck.cs" />
+    <Compile Include="Models\ViewModels\AgentViewModel.cs" />
     <Compile Include="Models\ViewModels\IViewModel.cs" />
     <Compile Include="Models\ViewModels\OperatorViewModel.cs" />
+    <Compile Include="Models\ViewModels\UserCreateViewModel.cs" />
+    <Compile Include="Models\ViewModels\UserViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -321,6 +328,9 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Operator\Index.cshtml" />
     <Content Include="Views\Operator\Create.cshtml" />
+    <Content Include="Views\User\Index.cshtml" />
+    <Content Include="Views\User\Create.cshtml" />
+    <Content Include="Views\User\Agents.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
