--- a/DealerPersonalAccount/Web.config
+++ b/DealerPersonalAccount/Web.config
@@ -5,8 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=HEkTO;Initial Catalog=DealerService;Integrated Security=True;Encrypt=False"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=HEkTO;Initial Catalog=DealerService;Integrated Security=True;Encrypt=False" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
